--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -2,14 +2,14 @@
 # to provide dependencies and expose ports for local testing
 
 services:
-  ffc-template-node:
+  ffc-tech-spike-rule-engine-proxy:
     build:
       target: development
-    image: ffc-template-node-development
-    container_name: ffc-template-node-development
+    image: ffc-tech-spike-rule-engine-proxy-development
+    container_name: ffc-tech-spike-rule-engine-proxy-development
     ports:
-      - "3000:3000"
-      - "9229:9229"
+      - "3020:3000"
+      - "9240:9229"
     volumes:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
