--- a/docker-compose.test.watch.yaml
+++ b/docker-compose.test.watch.yaml
@@ -1,5 +1,5 @@
 services:
-  ffc-template-node:
+  ffc-tech-spike-rule-engine-proxy:
     command: >
       sh -c "npm run test:watch"
     volumes:
