--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
 services:
-  ffc-template-node:
+  ffc-tech-spike-rule-engine-proxy:
     build:
       context: .
       target: production
-    image: ffc-template-node
-    container_name: ffc-template-node
+    image: ffc-tech-spike-rule-engine-proxy
+    container_name: ffc-tech-spike-rule-engine-proxy
     environment:
-      APPINSIGHTS_CLOUDROLE: ffc-template-node-local
+      APPINSIGHTS_CLOUDROLE: ffc-tech-spike-rule-engine-proxy-local
       APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      REMOTE_JBPM_URL: ${REMOTE_JBPM_URL}
