--- a/helm/ffc-tech-spike-rule-engine-proxy/Chart.yaml
+++ b/helm/ffc-tech-spike-rule-engine-proxy/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-description: description-of-project-goes-here
-name: ffc-template-node
+description: Proxy for accessing the jBPM api's
+name: ffc-tech-spike-rule-engine-proxy
 # this version is automatically updated in the build pipeline
 version: 1.0.0
 dependencies:
