--- a/helm/ffc-tech-spike-rule-engine-proxy/values.yaml
+++ b/helm/ffc-tech-spike-rule-engine-proxy/values.yaml
@@ -1,9 +1,9 @@
 environment: production
 environmentCode:
-name: ffc-template-node
-namespace: ffc-demo
-workstream: ffc-demo
-image: ffc-template-node
+name: ffc-tech-spike-rule-engine-proxy
+namespace: ffc-tech
+workstream: ffc-tech
+image: ffc-tech-spike-rule-engine-proxy
 
 labels:
   component: service
@@ -12,10 +12,10 @@ appInsights:
   key:
 
 containerConfigMap:
-  name: ffc-template-node-config-map
+  name: ffc-tech-spike-rule-engine-proxy-config-map
 
 containerSecret:
-  name: ffc-template-node-container-secret
+  name: ffc-tech-spike-rule-engine-proxy-container-secret
   type: Opaque
 
 deployment: {}
