--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
+  "name": "ffc-tech-spike-rule-engine-proxy",
   "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "description": "Proxy for accessing the jBPM api's",
+  "homepage": "https://github.com/DEFRA/ffc-tech-spike-rule-engine-proxy",
   "main": "app/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
@@ -18,7 +18,9 @@
   "license": "OGL-UK-3.0",
   "dependencies": {
     "@hapi/hapi": "20.2.2",
-    "applicationinsights": "2.3.5"
+    "applicationinsights": "2.3.5",
+    "@hapi/h2o2": "^9.1.0",
+    "joi": "^17.4.0"
   },
   "devDependencies": {
     "jest": "29.2.2",
